# Viewtiful

./: .gitignore  README.md  package-lock.json  pyproject.toml
backend/: main.py  requirements.txt
backend/static/: index.html  main.js  main.js.map
backend/static/public/: bundle.css  main.js  main.js.map
frontend/: package-lock.json  package.json  rollup.config.js
frontend/src/: App.svelte
frontend/src/screens/: Home.svelte  Search.svelte
frontend/src/widgets/: Navigator.svelte
